[project]
name = "nftables-gui"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (<2.0)",
    "flask (==3.0.1)",
    "flask-bootstrap (==3.3.7.1)",
    "flask-sqlalchemy (==3.1.1)",
    "flask-migrate (==4.0.7)",
    "flask-login (==0.6.3)",
    "flask-wtf (==1.2.1)",
    "hug (==2.6.1)",
    "email-validator (>=2.2.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "python-levenshtein (>=0.27.1,<0.28.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-sugar (>=1.0.0,<2.0.0)",
    "pytest-order (>=1.3.0,<2.0.0)",
    "pytest-cov (>=6.2.1,<7.0.0)",
    "pip-nftables (>=1.0.2.post1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
